--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 </head>
 
+<script src="scripts/homepage.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/f9fba280f4.js" crossorigin="anonymous"></script>
 <script>document.addEventListener("touchstart", function(){}, true);</script> 
 
 
 <body>
-
+  
     <div class="landing-page">
           <div class="header-area">
             <div class="logo">Data<b>Query</b></div>
